--- a/style.css
+++ b/style.css
@@ -102,30 +102,46 @@ nav ul li a{
 /* ===================Card Section================== */
 
 .grid_container .cards:nth-child(1){
-    background-color: white;
+    grid-area: one;
 }
 
 .grid_container .cards:nth-child(2){
-    background-color: red;
+    grid-area: two;
 }
 
 .grid_container .cards:nth-child(3){
-    background-color: purple;
+    grid-area: three;
 }
 
 .grid_container .cards:nth-child(4){
-    background-color: orange;
+    grid-area: four;
 }
 
 .grid_container .cards:nth-child(5){
-    background-color: blue;
+    grid-area: five;
 }
 
 .grid_container .cards:nth-child(6){
-    background-color: green;
+    grid-area: six;
 }
 .grid_container{
     display: grid;
+    grid-template-areas: 
+    'one two three'
+    'four five six';
+}
+
+@media screen and (max-width:440px) {
+    .grid_container{
+        display: grid;
+        grid-template-areas: 
+        'one'
+        'two'
+        'three'
+        'four'
+        'five'
+        'six';
+    }
 }
 
 .cards{
