--- a/style.css
+++ b/style.css
@@ -4,12 +4,17 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family:'Times New Roman', Times, serif;
+}
+
 section{
     color: white;
 }
 
 .section__color{
     background-color: #234240;
+    padding: 50px 0;
 }
 
 .container{
@@ -18,136 +23,46 @@ section{
     margin: 0 auto;
 }
 
-/* ======================Navigation section======================== */
-header{
-    background-color: rgb(0, 0, 34);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-nav{
-    display: flex;
-    /* background-color: red; */
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-nav ul{
-    display: flex;
-}
-
-nav ul li{
-    list-style: none;
-    padding: 10px 20px;
-    margin: 10px 0;
-}
-
-nav ul li:hover{
-    background-color: blue;
-    border-radius: 5px;
-}
-
-nav ul li a{
-    text-decoration: none;
+.button__fill{
+    background-color: rgb(1, 131, 151);
+    padding: 15px 30px;
+    border-radius: 24px;
+    border: none;
     color: white;
     text-transform: uppercase;
+    font-weight: bold;
 }
 
-.side-menu, .mobile{
-    display: none;
+.button__fill:hover{
+    color: rgb(1, 131, 151);
+    background-color: white;
+    transition: 0.5s ease-in-out;
 }
 
+/* ======================Navigation section======================== */
 
-/* ================Mobile Navigation============ */
-@media screen and (max-width:940px){
-    .desktop{
-        display: none;
-    }
-    
-    nav button{
-        padding: 5px 5px;
-        margin: 10px 0;
-    }
-    
-    .side-menu{
-        position: fixed;
-        width: 250px;
-        top: 0;
-        right: 0px;
-        height: 100vh;
-        z-index:10;
-        box-shadow: -10px 0 5px rgba(0,0,0,0.2);
-        background-color: rgb(0, 0, 34);
-        display: flex;
-        flex-direction: column;
-        justify-content:space-between;
-    
-    }
-    
-    .mobile{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-    
-    .mobile_social_icon{
-        border-top: 1px solid #333;
-        flex-direction: row;
-    }
+
+
+/* ================Mobile============ */
+
+
+
+/* ===================Intro Section================== */
+.intro{
+    width: 50%;
 }
 
-
-/* ===================Card Section================== */
-
-.grid_container .cards:nth-child(1){
-    grid-area: one;
+.intro h1{
+    font-size: 2rem;
 }
 
-.grid_container .cards:nth-child(2){
-    grid-area: two;
+.intro p{
+    margin: 2rem 0;
 }
 
-.grid_container .cards:nth-child(3){
-    grid-area: three;
-}
-
-.grid_container .cards:nth-child(4){
-    grid-area: four;
-}
-
-.grid_container .cards:nth-child(5){
-    grid-area: five;
-}
-
-.grid_container .cards:nth-child(6){
-    grid-area: six;
-}
-.grid_container{
-    display: grid;
-    grid-template-areas: 
-    'one two three'
-    'four five six';
-}
-
-@media screen and (max-width:440px) {
-    .grid_container{
-        display: grid;
-        grid-template-areas: 
-        'one'
-        'two'
-        'three'
-        'four'
-        'five'
-        'six';
-    }
-}
-
-.cards{
-    max-width: 300px;
-
-    img{
+@media screen and (max-width:600px) {
+    .intro{
         width: 100%;
     }
 }
+
