--- a/style.css
+++ b/style.css
@@ -8,8 +8,15 @@ body{
     font-family:'Times New Roman', Times, serif;
 }
 
+:root{
+    --primary-color: #234240;
+    --secondary-color:rgb(1, 131, 151);
+    --white-color:#fff;
+}
+
 section{
     color: white;
+    padding: 50px 0;
 }
 
 .section__color{
@@ -21,6 +28,7 @@ section{
     width: 80%;
     max-width: 900px;
     margin: 0 auto;
+    outline: 1px solid red;
 }
 
 .button__fill{
@@ -37,6 +45,24 @@ section{
     color: rgb(1, 131, 151);
     background-color: white;
     transition: 0.5s ease-in-out;
+}
+
+.button__unfill{
+    padding: 15px 30px;
+    border-radius: 24px;
+    border: none;
+    color:var(--secondary-color);
+    background-color: var(--white-color);
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 2px solid var(--secondary-color);
+}
+
+.button__unfill:hover{
+    color:var(--white-color);
+    background-color: var(--secondary-color);
+    transition: 0.5s ease-in-out;
+    overflow-x: scroll;
 }
 
 /* ======================Navigation section======================== */
@@ -66,3 +92,34 @@ section{
     }
 }
 
+/* ===============Card Section===================== */
+.cards{
+    width: 250px;
+    background-color: white;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+    color: black;
+    border-radius: 10px;
+}
+
+.cards .card__header img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+.cards .card__body{
+    padding: 10px;
+}
+
+.cards .card__body p{
+    margin: 1rem 0;
+}
+
+.grid__cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,250px);
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
