--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ section{
     width: 80%;
     max-width: 900px;
     margin: 0 auto;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 .button__fill{
