--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ section{
 }
 
 .container{
-    width: 80%;
-    max-width: 900px;
+    width: 90%;
+    max-width: 1000px;
     margin: 0 auto;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 .button__fill{
@@ -86,7 +86,7 @@ section{
     margin: 2rem 0;
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:767px) {
     .intro{
         width: 100%;
     }
@@ -94,7 +94,7 @@ section{
 
 /* ===============Card Section===================== */
 .cards{
-    width: 250px;
+    /* width: 250px; */
     background-color: white;
     box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
     color: black;
@@ -103,8 +103,9 @@ section{
 
 .cards .card__header img{
     width: 100%;
-    height: 150px;
+    height: 200px;
     object-fit: cover;
+    object-position:center;
     border-radius: 10px 10px 0 0;
 }
 
@@ -118,7 +119,7 @@ section{
 
 .grid__cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit,250px);
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     gap: 15px;
     justify-content: center;
     align-items: center;
